Updated the donor login

--- a/client/app/components/navbar/navbar.html
+++ b/client/app/components/navbar/navbar.html
@@ -32,8 +32,8 @@
          <a ui-sref="transporter">Transporter</a></li>          
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}">
         <a ui-sref="admin">Users</a></li>
-        <li ng-show="isAdmin()" ng-class="{active: isActive('/reports')}">
-        <a ui-sref="reports">Reports</a></li>
+   <!--      <li ng-show="isAdmin()" ng-class="{active: isActive('/reports')}">
+        <a ui-sref="reports">Reports</a></li> -->
       </ul>
 
       <ul class="nav navbar-nav navbar-right" >
