Updated the code

--- a/client/app/components/navbar/navbar.html
+++ b/client/app/components/navbar/navbar.html
@@ -27,7 +27,7 @@
         <li ng-show="isReceiver()" ng-class="{active: isActive('/receiver')}">
          <a ui-sref="receiver">Receiver</a></li>
         <li ng-show="isDonor()" ng-class="{active: isActive('/donor')}">
-         <a ui-sref="donor">Donor</a></li>
+         <a ui-sref="donor">Donate Food</a></li>
         <li ng-show="isTransporter()" ng-class="{active: isActive('/transporter')}">
          <a ui-sref="transporter">Transporter</a></li>          
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}">
